--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
     <div class="row">
-        <h2 class="people_categroy">Researcher</h2>
+        <h2 class="people_categroy">Jiaqing Liang</h2>
         <hr>
     </div>
     <div class="row person">
@@ -10,16 +10,13 @@
                  style="width: 100px; height: 100px;">
         </div>
         <div class="col-sm-12 col-sm-4 col-md-4 col-lg-4 text-left">
-            <h3>Jiaqing Liang</h3>
             <h4>梁家卿</h4>
             <p>
-                <a href="mailto:l.j.q.light@gmail.com">l.j.q.light@gmail.com</a>
-            </p>
-            <p>
+                <a href="mailto:l.j.q.light@gmail.com">l.j.q.light@gmail.com</a>,
                 <a href="mailto:liangjiaqing@fudan.edu.com">liangjiaqing@fudan.edu.com</a>
              </p>
             <p>Assistant Professor</p>
-	      <p>School of Data Science</p>
+	        <p>School of Data Science</p>
             <p>Fudan University, Shanghai, China</p>
         </div>
     </div>
