--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         </div>
         <div class="col-lg-12">
             <h3>Links</h3>
+            <p><a href="http://kw.fudan.edu.cn/">Knowledge Works</a></p>
             <p><a href="https://dblp.uni-trier.de/pid/177/7508.html">My DBLP</a></p>
-            <p><a href="https://github.com/lsdefine">https://github.com/lsdefine</a></p>
+            <p><a href="https://github.com/lsdefine">My Github</a></p>
         </div>
     </div>
 
@@ -92,7 +93,7 @@
                         });
                         aus = aus.join(', ');
                         if (z.year !== lastyear) {
-                            let ee = $('<h4></h4>');
+                            let ee = $('<h5></h5>');
                             ee.html(z.year);
                             $('#mypublish').append(ee);
                         }
