--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         });
                         aus = aus.join(', ');
                         if (z.year !== lastyear) {
-                            let ee = $('<h4></h4>');
+                            let ee = $('<h4 style="margin:5px"></h4>');
                             ee.html(z.year);
                             $('#mypublish').append(ee);
                         }
