--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h4>梁家卿</h4>
             <p>
                 <a href="mailto:l.j.q.light@gmail.com">l.j.q.light@gmail.com</a>,
-                <a href="mailto:liangjiaqing@fudan.edu.com">liangjiaqing@fudan.edu.com</a>
+                <a href="mailto:liangjiaqing@fudan.edu.cn">liangjiaqing@fudan.edu.cn</a>
              </p>
             <p>Assistant Professor</p>
 	        <p>School of Data Science</p>
